userlandfs: Make the "request data" area user-cloneable.

Fixes #14497. Thanks to leorize for helping debug!